# django_catalog

./: .env.sample  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  docker-compose-dev.yaml  docker-compose-local.yaml  docker-compose-prod.yaml  manage.py  passenger_wsgi.py  pyproject.toml  requirements.txt
api/: serializers.py  urls.py  views.py
apps/api/: serializers.py  urls.py  views.py
apps/main/: signals.py  sitemaps.py  urls.py  utils.py  views.py
apps/main/migrations/: 0001_initial.py  0002_alter_product_date_alter_product_rating_and_more.py  0003_alter_product_date_alter_product_rating.py  0004_alter_product_date_alter_product_rating.py  0005_alter_product_date_alter_product_rating.py  0006_manufacturer_alter_specs_options_alter_product_date_and_more.py  (+35 more)
django_catalog/: asgi.py  env_config.py  settings.py  urls.py  wsgi.py
django_catalog/settings/: __init__.py  base.py  local.py  production.py
main/: admin.py  apps.py  forms.py  models.py  services.py  signals.py  sitemaps.py  urls.py  utils.py  views.py
main/migrations/: 0001_initial.py  0002_alter_product_date_alter_product_rating_and_more.py  0003_alter_product_date_alter_product_rating.py  0004_alter_product_date_alter_product_rating.py  0005_alter_product_date_alter_product_rating.py  0006_manufacturer_alter_specs_options_alter_product_date_and_more.py  0007_alter_product_date_alter_product_rating.py  0008_alter_category_slug_alter_collection_category_and_more.py  0009_alter_product_collection_alter_product_date_and_more.py  0010_alter_product_date_alter_product_rating_and_more.py  0011_alter_product_date_alter_product_rating.py  0012_phone_alter_manufacturer_name_alter_product_date_and_more.py  0013_phone_isviber_phone_store_alter_product_date_and_more.py  0014_category_iscabinet_category_number_and_more.py  0015_alter_product_date_alter_product_rating.py  0016_manufacturer_slug_alter_product_date_and_more.py  0017_alter_manufacturer_slug_alter_product_date_and_more.py  0018_remove_manufacturer_slug_and_more.py  0019_alter_product_date_alter_product_manufacturer_and_more.py  0020_alter_collection_manufacturer_alter_product_date_and_more.py  0021_manufacturer_slug_alter_product_date_and_more.py  0022_alter_category_number_alter_manufacturer_slug_and_more.py  0023_product_price_alter_product_date_and_more.py  0024_remove_collection_manufacturer_alter_product_date_and_more.py  0025_remove_collection_category_and_more.py  0026_product_collectioncategory_alter_product_category_and_more.py  0027_address_alter_collection_category_and_more.py  0028_alter_phone_store_alter_product_date_and_more.py  0029_alter_phone_isviber_alter_product_date_and_more.py  0030_remove_phone_ismain_address_name_alter_product_date_and_more.py  0031_feedback_alter_product_date_alter_product_rating.py  0032_alter_feedback_product_link_alter_product_date_and_more.py  0033_alter_product_collectioncategory_alter_product_date_and_more.py  0034_alter_product_date_alter_product_rating.py  0035_alter_product_date_alter_product_rating.py  0036_feedback_date_alter_product_date_and_more.py  0037_alter_feedback_date_alter_product_date_and_more.py  0038_rename_product_link_feedback_product_feedback_link_and_more.py  0039_feedback_product_name_alter_feedback_date_and_more.py  0040_alter_feedback_date_alter_product_date_and_more.py  (+7 more)
main/templates/: catalog.html  error.html  index.html  product.html
src/: conftest.py  script.py
src/apps/: utills.py
src/django_catalog/: asgi.py  urls.py  wsgi.py
(+113 files in other folders)
