[project]
name = "django-catalog"
version = "0.1.0"
description = ""
authors = [
    {name = "5alex52",email = "alkurkovsk@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (>=4.2.0,<5.0.0)",
    "django-unfold (>=0.67.0,<0.68.0)",
    "django-cleanup (>=9.0.0,<10.0.0)",
    "django-debug-toolbar (>=6.0.0,<7.0.0)",
    "django-material-admin (>=1.8.6,<2.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "easy-thumbnails (>=2.10.1,<3.0.0)",
    "idna (>=3.10,<4.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pytils (>=0.4.4,<0.5.0)",
    "pytz (>=2025.2,<2026.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "transliterate (>=1.10.2,<2.0.0)",
    "googletrans (>=4.0.2,<5.0.0)",
    "django-autocomplete-light (>=3.12.1,<4.0.0)",
    "django-smart-selects (>=1.7.2,<2.0.0)",
    "reorder-python-imports (>=3.15.0,<4.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "telebot (>=0.0.5,<0.0.6)",
    "phonenumbers (>=9.0.15,<10.0.0)",
    "django-phonenumber-field (>=8.3.0,<9.0.0)",
    "ruff (>=0.13.3,<0.14.0)"
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"